# LegalTech

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  security.yml
backend/: .env.example  .eslintrc.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  health.py
backend/app/core/: config.py
backend/src/: index.ts
frontend/: .env.example  .eslintrc.json  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
